--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -2,8 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Work Sans";
 }
 body{
     width: 100%;
     height: 100%;
+    background-color: #2B2B2B;
 }
