--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -2,6 +2,12 @@ header {
   width: 100%;
   height: 100px;
   padding: 20px 50px;
+  @include for-size(tablet){
+    padding: 15px 50px;
+  }
+  @include for-size(mobile){
+    padding: 15px 30px;
+  }
   .navbar-container {
     .navbar {
       @include center-items;
@@ -13,21 +19,23 @@ header {
         @include center-items;
         gap: 10px;
         a {
-          padding: 0px 20px;
-          color: #fff;
-          text-align: center;
-          font-size: 16px;
-          font-weight: 600;
-          line-height: 140%;
-          text-decoration: none;
+          @include navbar-page-link-style;
           transition: 0.3s;
 
           &:hover{
             transform: scale(1.1);
             color: #A259FF;
           }
+          @include for-size(tablet){
+            display: none;
         }
-        
+        }
+        .sidebar-icon{
+            display: none;
+            @include for-size(tablet){
+                display: initial;
+            }
+        }
       }
     }
   }
