--- a/scss/layout/_trending.scss
+++ b/scss/layout/_trending.scss
@@ -2,12 +2,16 @@
   padding: 80px 0px;
   @include center-items;
   flex-direction: column;
+  @include for-size(tablet){
+    padding: 40px 0px;
+  }
   .trending-container {
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap:60px;
     .headline {
-      width: 1050px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 10px;
@@ -26,6 +30,11 @@
     .card-collection{
         display: flex;
         gap:30px;
+        .card:nth-child(3){
+            @include for-size(tablet){
+                display: none;
+            }
+        }
     }
   }
 }
