updated mobile responsive design for getstarted btn

--- a/scss/components/_getstarted.scss
+++ b/scss/components/_getstarted.scss
@@ -17,4 +17,9 @@
   &:hover{
     transform: scale(0.9);
   }
+  @include for-size(mobile){
+    position: absolute;
+    transform: translateY(549px);
+    width: 315px;
+  }
 }
