--- a/scss/layout/_hero-section.scss
+++ b/scss/layout/_hero-section.scss
@@ -1,4 +1,5 @@
 .hero-section {
+  width: 100%;
   display: flex;
   padding: 80px 195px;
   justify-content: center;
@@ -7,6 +8,12 @@
   @include for-size(tablet){
     padding: 80px 0px;
     gap: 20px;
+  }
+  @include for-size(mobile){
+    padding: 40px 0px;
+    
+    align-items: center; 
+    justify-content: center;
   }
 
   .hero-container {
@@ -19,6 +26,10 @@
         width: 690px;
         margin: 0px;
     }
+    @include for-size(mobile){
+      flex-direction: column;
+      width: 315px;
+    }
     
     .left {
       display: flex;
@@ -28,6 +39,9 @@
       @include for-size(tablet){
         width: 330px;
     }
+    @include for-size(tablet){
+      gap:10px;
+  }
       h1 {
         font-size: 67px;
         font-weight: 600;
@@ -36,6 +50,9 @@
         @include for-size(tablet){
             font-size: 38px;
         }
+        @include for-size(tablet){
+          font-size: 28px;
+      }
       }
       p {
         font-size: 22px;
@@ -45,15 +62,22 @@
         @include for-size(tablet){
             font-size: 16px;
         }
+       
       }
       .info-tags {
         @include center-items;
         gap: 30px;
+        @include for-size(mobile){
+          position: absolute;
+          transform: translateY(629px);
+      }
         .sale,
         .auctions,
         .artists {
           width: 150px;
-
+          @include for-size(mobile){
+           width: 85px;
+        }
           p{
             font-size: 23.99px;
             @include for-size(tablet){
@@ -79,6 +103,9 @@
         @include for-size(tablet){
             width: 330px;
         }
+        @include for-size(tablet){
+          width: 315px;
+      }
       }
     }
   }
