updated responsive design for mobile version

--- a/scss/layout/_hero-section.scss
+++ b/scss/layout/_hero-section.scss
@@ -5,14 +5,14 @@
   justify-content: center;
   align-items: center;
   gap: 30px;
-  @include for-size(tablet){
+  @include for-size(tablet) {
     padding: 80px 0px;
     gap: 20px;
   }
-  @include for-size(mobile){
+  @include for-size(mobile) {
     padding: 40px 0px;
-    
-    align-items: center; 
+
+    align-items: center;
     justify-content: center;
   }
 
@@ -21,91 +21,99 @@
     margin-left: -80px;
     margin-right: -80px;
     display: flex;
-    gap:30px;
-    @include for-size(tablet){
-        width: 690px;
-        margin: 0px;
+    gap: 30px;
+    @include for-size(tablet) {
+      width: 690px;
+      margin: 0px;
     }
-    @include for-size(mobile){
+    @include for-size(mobile) {
       flex-direction: column;
       width: 315px;
     }
-    
+
     .left {
       display: flex;
       flex-direction: column;
       gap: 30px;
       width: 510px;
-      @include for-size(tablet){
+      @include for-size(tablet) {
         width: 330px;
-    }
-    @include for-size(tablet){
-      gap:10px;
-  }
+      }
+      @include for-size(tablet) {
+        gap: 10px;
+      }
       h1 {
         font-size: 67px;
         font-weight: 600;
         line-height: 110%;
         text-transform: capitalize;
-        @include for-size(tablet){
-            font-size: 38px;
+        @include for-size(tablet) {
+          font-size: 38px;
         }
-        @include for-size(tablet){
+        @include for-size(tablet) {
           font-size: 28px;
-      }
+        }
       }
       p {
         font-size: 22px;
         font-weight: 400;
         line-height: 160%;
         text-transform: capitalize;
-        @include for-size(tablet){
-            font-size: 16px;
+        @include for-size(tablet) {
+          font-size: 16px;
         }
-       
       }
       .info-tags {
-        @include center-items;
-        gap: 30px;
+        @include info-tags-template;
         @include for-size(mobile){
-          position: absolute;
-          transform: translateY(629px);
-      }
-        .sale,
-        .auctions,
-        .artists {
-          width: 150px;
-          @include for-size(mobile){
-           width: 85px;
-        }
-          p{
-            font-size: 23.99px;
-            @include for-size(tablet){
-                font-size: 16px;
-            }
-          }
-        }
-        h3 {
-          font-family: "Space Mono";
-          font-size: 28px;
-          font-weight: 700;
-          line-height: 140%;
-          text-transform: capitalize;
-          @include for-size(tablet){
-            font-size: 22px;
-        }
+          visibility: hidden;
+          height: 0px;
         }
       }
     }
     .right {
-      img {
+      display: flex;
+      flex-direction:column;
+      gap:40px;
+      .gif {
         width: 510px;
-        @include for-size(tablet){
-            width: 330px;
+        @include for-size(tablet) {
+          width: 330px;
         }
-        @include for-size(tablet){
+        @include for-size(tablet) {
           width: 315px;
+        }
       }
+      .start {
+        visibility: hidden;
+        @include for-size(mobile) {
+          visibility: visible;
+          display: flex;
+          width: 315px;
+          height: 60px;
+          justify-content: center;
+          align-items: center;
+          gap: 12px;
+          border-radius: 20px;
+          background-color: #a259ff;
+          color: #fff;
+          font-size: 16px;
+          font-weight: 600;
+          line-height: 140%;
+          cursor: pointer;
+          transition: 0.3s;
+          border: none;
+          &:hover {
+            transform: scale(0.9);
+          }
+        }
+      }
+      .info-tags {
+        visibility: hidden;
+        @include info-tags-template;
+        @include for-size(mobile){
+          visibility: visible;
+        }
       }
     }
   }
