--- a/scss/components/_artist_card.scss
+++ b/scss/components/_artist_card.scss
@@ -11,8 +11,33 @@
   &:hover{
     transform: scale(0.94);
   }
+  @include for-size(tablet){
+    width: 330px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    gap:20px;
+    
+  }
   .user-avatar {
     margin-bottom: 20px;
+   
+    @include for-size(tablet){
+      margin: 0px;
+      width: 60px;
+      height: 60px;
+    }
+  }
+  .art-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @include for-size(tablet){
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    
   }
   h5 {
     font-size: 22px;
@@ -24,6 +49,9 @@
   .top-sales {
     @include center-items;
     gap: 10px;
+    @include for-size(tablet){
+      flex-direction: column;
+    }
 
     .total {
       color: #858584;
