added responsive design for card template

--- a/scss/components/_browse-card.scss
+++ b/scss/components/_browse-card.scss
@@ -8,10 +8,25 @@
   &:hover{
     transform: scale(0.94);
   }
+  @include for-size(tablet){
+    width: 150px;
+    height: 209px;
+}
   .image-section {
     width: 240px;
     height: 240px;
     position: relative;
+
+    @include for-size(tablet){
+        width: 150px;
+        height: 142px;
+    }
+    .art{
+        @include for-size(tablet){
+            width: 150px;
+            height: 142px;
+        }
+    }
    
     .blur-layer {
       width: 240px;
@@ -23,6 +38,10 @@
       z-index: 7;
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(7px);
+      @include for-size(tablet){
+        width: 150px;
+        height: 142px;
+    }
     }
     .icon{
         position: absolute;
@@ -40,6 +59,9 @@
       font-style: normal;
       font-weight: 600;
       line-height: 140%;
+      @include for-size(tablet){
+        font-size: 16px;
+      }
     }
   }
 }
