--- a/scss/components/_option-box.scss
+++ b/scss/components/_option-box.scss
@@ -6,23 +6,61 @@
   gap: 20px;
   border-radius: 20px;
   background-color: #3b3b3b;
+  cursor: pointer;
+  transition: 0.3s;
+  &:hover{
+    transform: scale(1.1);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
 
+  @include for-size(tablet){
+    width: 210px;
+    padding: 10px 20px 30px 20px;
+  }
+  @include for-size(mobile){
+   flex-direction: row;
+   width: 315px;
+   padding: 20px;
+  }
+img{
+    @include for-size(tablet){
+        width: 160px;
+      }
+      @include for-size(mobile){
+        width: 100px;
+      }
+}
   .information {
     @include center-items;
     flex-direction: column;
     gap: 10px;
+    @include for-size(mobile){
+        align-items: flex-start;
+      }
+
+    
 
     h6 {
       font-size: 22px;
       font-weight: 600;
       line-height: 140%;
       text-align: center;
+      @include for-size(tablet){
+        font-size: 16px;
+      }
+      
     }
     p {
       text-align: center;
       font-size: 16px;
       font-weight: 400;
       line-height: 140%;
+      @include for-size(tablet){
+        font-size: 12px;
+      }
+      @include for-size(mobile){
+        text-align: left;
+      }
     }
   }
 }
