nft cards section created with full responsive design

--- a/scss/layout/_artist-page-cover.scss
+++ b/scss/layout/_artist-page-cover.scss
@@ -1,4 +1,7 @@
 .cover-section {
+  @include for-size(mobile){
+    min-width: 375px;
+}
   .cover-photo {
     align-items: center;
     align-self: stretch;
