--- a/scss/layout/_page-footer.scss
+++ b/scss/layout/_page-footer.scss
@@ -12,6 +12,9 @@
     @include for-size(tablet) {
       margin-top: 49px;
     }
+    @include for-size(mobile){
+      min-width: 375px;
+  }
   }
 
   .footer-container {
