--- a/scss/layout/_hero-section.scss
+++ b/scss/layout/_hero-section.scss
@@ -11,7 +11,7 @@
   }
   @include for-size(mobile) {
     padding: 40px 0px;
-
+min-width: 375px;
     align-items: center;
     justify-content: center;
   }
