--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -7,6 +7,8 @@ header {
   }
   @include for-size(mobile) {
     padding: 15px 30px;
+      min-width: 375px;
+  
   }
   .navbar-container {
     .navbar {
