--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,3 +27,9 @@
 @import "../scss/layout/page-footer";
 @import "../scss/layout/sign-up";
 @import "../scss/components/authorise";
+@import "../scss/layout/ranking-page";
+@import "../scss/components/table-body";
+@import "../scss/layout/artist-page-cover";
+@import "../scss/layout/artist-page-info";
+@import "../scss/layout/collection";
+@import "../scss/layout/nft-cards_section";
