--- a/scss/components/_table-body.scss
+++ b/scss/components/_table-body.scss
@@ -1,5 +1,7 @@
 .table-body {
-       
+       display: flex;
+       flex-direction: column;
+       gap:20px;
     .artist-info {
       display: flex;
       width: 1050px;
@@ -52,6 +54,7 @@
           img {
             width: 60px;
             height: 60px;
+            border-radius: 100px;
             @include for-size(tablet){
                 width: 24px;
                 height: 24px;
