added subhead section and searchinput with full responsive design

--- a/scss/layout/_page-footer.scss
+++ b/scss/layout/_page-footer.scss
@@ -51,7 +51,7 @@
       }
       .subscription {
         display: flex;
-        width: 420px;
+        width: 100%;
 
         @include for-size(mobile){
             flex-direction: column;
