--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,3 +33,5 @@
 @import "../scss/layout/artist-page-info";
 @import "../scss/layout/collection";
 @import "../scss/layout/nft-cards_section";
+@import "../scss/layout/subhead";
+@import "../scss/components/searchinput";
