--- a/client/scss/components/_artist_card.scss
+++ b/client/scss/components/_artist_card.scss
@@ -9,8 +9,25 @@
   transition: 0.3s;
   position: relative;
   cursor: pointer;
+  i {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: 10px;
+    right: 10px;
+    color: grey;
+    font-size: 16px;
+    transition: 0.2s;
 
- 
+    &:hover {
+      transform: scale(1.1);
+      color: rgba(255, 0, 0, 0.281);
+    }
+
+    &.heart-icon-clicked {
+      color: red;
+    }
+  }
   &:hover {
     transform: scale(0.94);
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
@@ -29,11 +46,10 @@
     left: 20px;
     font-family: "Space Mono";
     font-size: 16px;
-    color:#858584;
-    @include for-size(tablet){
-      top:12px;
+    color: #858584;
+    @include for-size(tablet) {
+      top: 12px;
       left: 13px;
-      
     }
   }
   @include for-size(tablet) {
