all updates added, issues fixed, sidebar modified

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -36,3 +36,4 @@
 @import "../scss/layout/subhead";
 @import "../scss/components/searchinput";
 @import "../scss/components/skip-btn";
+@import "../scss/components/sidebar";
