--- a/client/scss/main.css
+++ b/client/scss/main.css
@@ -2733,3 +2733,36 @@ form .submit:hover {
 .skip-btn img:hover {
   transform: scale(1.1);
 }
+
+.sidebar {
+  display: none;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  position: absolute;
+}
+.sidebar a {
+  color: white;
+  text-decoration: none;
+}
+@media screen and (max-width: 1050px) {
+  .sidebar {
+    padding: 10px;
+    height: 280px;
+    border-radius: 5px;
+    flex-direction: column;
+    gap: 20px;
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 140%;
+    text-decoration: none;
+    background-color: rgb(67, 67, 67);
+  }
+}
+.sidebar .signup {
+  margin-top: 30px;
+  width: 100%;
+  height: 50px;
+}
