--- a/client/scss/components/_sidebar.scss
+++ b/client/scss/components/_sidebar.scss
@@ -4,6 +4,7 @@
   top: 0;
   right: 0;
   position: absolute;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   a {
     color: white;
     text-decoration: none;
